# Fundamentals-of-Building-AI-Agents

./: .env.example  .gitignore  foo.py  main.py  pyproject.toml
00_AI-Math-Assistant/: Hello World-v1-OpenRouter.ipynb  Hello World-v1.ipynb
01_AI-Powered-Data-Analysis-LCEL/: LLM-Powered Data Science-OpenRouter.ipynb
02_Build-Interactive-LLM-Agents-with-Tools/: Interactive Tool-Calling Agent-v1.ipynb
03_Build-a-Tool-Calling-Agent/: Tool-Calling-v1-OpenRouter.ipynb
04_Data-Visualization-Agent/: chat-with-your-dataframe-using-langchain-openrouter.ipynb  chat-with-your-dataframe-using-langchain-v1.ipynb
